# internal/server/grpc.go
@@ -1,16 +1,17 @@
 package server
 
 import (
+	v1 "admin/api/admin/v1"
+	"admin/internal/conf"
+	"admin/internal/service"
+
 	"github.com/go-kratos/kratos/v2/log"
 	"github.com/go-kratos/kratos/v2/middleware/recovery"
 	"github.com/go-kratos/kratos/v2/transport/grpc"
-	v1 "kratos-admin-demo/api/admin/v1"
-	"kratos-admin-demo/internal/conf"
-	"kratos-admin-demo/internal/service"
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, auth *service.AuthService, logger log.Logger) *grpc.Server {
+func NewGRPCServer(c *conf.Server, admin *service.AdminService, logger log.Logger) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
@@ -26,6 +27,6 @@ func NewGRPCServer(c *conf.Server, auth *service.AuthService, logger log.Logger)
 		opts = append(opts, grpc.Timeout(c.Grpc.Timeout.AsDuration()))
 	}
 	srv := grpc.NewServer(opts...)
-	v1.RegisterAuthServer(srv, auth)
+	v1.RegisterAdminServer(srv, admin)
 	return srv
 }
