# openapi.yaml
@@ -3,20 +3,20 @@
 
 openapi: 3.0.3
 info:
-    title: Auth API
+    title: Admin API
     version: 0.0.1
 paths:
     /login:
         post:
             tags:
-                - Auth
+                - Admin
             description: Login 登录账号
-            operationId: Auth_Login
+            operationId: Admin_Login
             requestBody:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/LoginRequest'
+                            $ref: '#/components/schemas/admin.v1.LoginRequest'
                 required: true
             responses:
                 "200":
@@ -24,24 +24,18 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/LoginReply'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
+                                $ref: '#/components/schemas/admin.v1.LoginReply'
     /refresh:
         post:
             tags:
-                - Auth
+                - Admin
             description: RefreshToken 刷新 AccessToken
-            operationId: Auth_Refresh
+            operationId: Admin_Refresh
             requestBody:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/RefreshRequest'
+                            $ref: '#/components/schemas/admin.v1.RefreshRequest'
                 required: true
             responses:
                 "200":
@@ -49,24 +43,18 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/LoginReply'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
+                                $ref: '#/components/schemas/admin.v1.LoginReply'
     /register:
         post:
             tags:
-                - Auth
+                - Admin
             description: Register 注册账号
-            operationId: Auth_Register
+            operationId: Admin_Register
             requestBody:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/RegisterRequest'
+                            $ref: '#/components/schemas/admin.v1.RegisterRequest'
                 required: true
             responses:
                 "200":
@@ -74,24 +62,10 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/RegisterReply'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
+                                $ref: '#/components/schemas/admin.v1.RegisterReply'
 components:
     schemas:
-        GoogleProtobufAny:
-            type: object
-            properties:
-                '@type':
-                    type: string
-                    description: The type of the serialized message.
-            additionalProperties: true
-            description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
-        LoginReply:
+        admin.v1.LoginReply:
             type: object
             properties:
                 accessToken:
@@ -100,7 +74,7 @@ components:
                     type: string
                 exp:
                     type: string
-        LoginRequest:
+        admin.v1.LoginRequest:
             type: object
             properties:
                 username:
@@ -109,17 +83,17 @@ components:
                     type: string
                 vCode:
                     type: string
-        RefreshRequest:
+        admin.v1.RefreshRequest:
             type: object
             properties:
                 refreshToken:
                     type: string
-        RegisterReply:
+        admin.v1.RegisterReply:
             type: object
             properties:
                 id:
                     type: string
-        RegisterRequest:
+        admin.v1.RegisterRequest:
             type: object
             properties:
                 username:
@@ -130,21 +104,5 @@ components:
                     type: string
                 emailCode:
                     type: string
-        Status:
-            type: object
-            properties:
-                code:
-                    type: integer
-                    description: The status code, which should be an enum value of [google.rpc.Code][google.rpc.Code].
-                    format: int32
-                message:
-                    type: string
-                    description: A developer-facing error message, which should be in English. Any user-facing error message should be localized and sent in the [google.rpc.Status.details][google.rpc.Status.details] field, or localized by the client.
-                details:
-                    type: array
-                    items:
-                        $ref: '#/components/schemas/GoogleProtobufAny'
-                    description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
-            description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
 tags:
-    - name: Auth
+    - name: Admin
